= Changelog of devonfw-ide

This file documents all notable changes to https://github.com/devonfw/ide[devonfw-ide].

== 2023.04.001

Release with new features and bugfixes:

* https://github.com/devonfw/ide/issues/1065[#1065]: compute checksum of binary downloads
* https://github.com/devonfw/ide/issues/1076[#1076]: Fix extraction error in doReplaceExtractedSkipSingleFolder()
* https://github.com/devonfw/ide/issues/1054[#1054]: automated security warnings
* https://github.com/devonfw/ide/issues/1039[#1039]: Add support for Kotlin.
* https://github.com/devonfw/ide/issues/1080[#1080]: auto-configure IntelliJ core settings
* https://github.com/devonfw/ide/issues/1104[#1104]: IntelliJ plugin installation not working
* https://github.com/devonfw/ide/issues/1099[#1099]: progress output when project is cloned
* https://github.com/devonfw/ide/issues/1098[#1098]: devon node version set buggy

The full list of changes for this release can be found in https://github.com/devonfw/ide/milestone/43?closed=1[milestone 2023.04.001].

== 2023.03.003

Release with new features and bugfixes:

* https://github.com/devonfw/ide/issues/1074[#1074]: Fix vscode plugin installation

The full list of changes for this release can be found in https://github.com/devonfw/ide/milestone/42?closed=1[milestone 2023.03.003].

== 2023.03.002

Release with new features and bugfixes:

* https://github.com/devonfw/ide/issues/1071[#1071]: devon.bat sets wrong user PATH in Windows system environment settings

The full list of changes for this release can be found in https://github.com/devonfw/ide/milestone/41?closed=1[milestone 2023.03.002].

== 2023.03.001

Release with new features and bugfixes:

* https://github.com/devonfw/ide/issues/1068[#1068]: setup of devon ide create hangs
* https://github.com/devonfw/ide/issues/999[#999]: Ability to require minimum devonfw-ide version
