@@ -6,6 +6,7 @@ This file documents all notable changes to https://github.com/devonfw/ide[devonf
 
 Release with new features and bugfixes:
 
+* https://github.com/devonfw/ide/issues/1118[#1118]: Add milestone versions of Eclipse
 * https://github.com/devonfw/ide/issues/1065[#1065]: compute checksum of binary downloads
 * https://github.com/devonfw/ide/issues/1076[#1076]: Fix extraction error in doReplaceExtractedSkipSingleFolder()
 * https://github.com/devonfw/ide/issues/1054[#1054]: automated security warnings
